--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/server.js",
   "scripts": {
     "start": "node build/server.js",
+    "prestart": "npm run build",
     "start:dev": "nodemon --watch src --exec ts-node src/server.ts",
     "build": "rimraf build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
